deployment/03-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: mysql
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: backend
  type: ClusterIP
