deployment/11-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 33333
  selector:
    app: frontend
  type: NodePort
